force-app/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <description>Computed engagement score (0-95) calculated by FlowActionCalculateScore invocable Apex. Updated by Account_Score_Calculator auto-launched flow.</description>
    <label>Account Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>