force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>Engagement tier derived from Account Score: Bronze / Silver / Gold / Platinum. Set by Account_Score_Calculator auto-launched flow.</description>
    <label>Account Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>