force-app/main/default/objects/Account/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <label>Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>