force-app/main/default/objects/Account/fields/Total_Closed_Won_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Won_Revenue__c</fullName>
    <description>Running total of all Closed Won Opportunity amounts linked to this Account. Populated nightly by OpportunityRollupBatch. Do not edit manually.</description>
    <label>Total Closed Won Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>